# NDK3Ways

./: README.md  方式一  方式三
TestNdk/: build.gradle  settings.gradle
TestNdk/app/: build.gradle
TestNdk/app/src/main/: AndroidManifest.xml
TestNdk/app/src/main/res/layout/: activity_main.xml
TestNdk/gradle/wrapper/: gradle-wrapper.properties
TestNdk/jincrash/: build.gradle
TestNdk/jincrash/src/main/: AndroidManifest.xml
TestNdk/jincrash/src/main/jni/: com_crashcapture_NativeCrashCapture_JNI.h  native_crash_capture.cpp
TestNdk/jincrash/src/main/jni/corkscrew/: backtrace-arch.h  backtrace-helper.c  backtrace-helper.h  (+4 more)
TestNdkNew/: settings.gradle
TestNdkNew/app/: build.gradle
TestNdkNew/app/src/main/: AndroidManifest.xml
TestNdkNew/jnicrash/: build.gradle
TestNdkNew/jnicrash/src/main/: AndroidManifest.xml
TestNdkNew/jnicrash/src/main/cpp/: Android.mk  com_crashcapture_NativeCrashCapture_JNI.h
TestNdkNew2/: 方式二
TestNdkNew2/gradle/wrapper/: gradle-wrapper.properties
TestNdkNew2/jnicrash/: build.gradle
TestNdkNew2/jnicrash/src/main/cpp/: CMakeLists.txt  native_crash_capture.cpp
TestNdkNew2/jnicrash/src/main/cpp/corkscrew/: ptrace.c
TestNdkNew2/jnicrash/src/main/cpp/corkscrew/arch-arm/: ptrace-arm.c
TestNdkNew2/jnicrash/src/main/cpp/cutils/: threads.h
TestNdkNew2/jnicrash/src/main/cpp/debuggerd/: android_filesystem_capability.h  getevent.c  tombstone.c  tombstone.h  utility.c
TestNdkNew2/jnicrash/src/main/cpp/debuggerd/arm/: machine.c
TestNdkNew2/jnicrash/src/main/cpp/handler/: exception_handler.cpp  linux_syscall_support.h  memory.h
(+20 files in other folders)
